--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-help-queue",
+  "name": "taproom-react",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,20 +8,23 @@
     "lint-fix": "eslint src/** src/**/** --fix; exit 0",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack-dev-server",
-    "start": "npm run build && webpack-dev-server --open"
+    "start": "webpack-dev-server --open"
   },
   "author": "Tracy Reith",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^2.1.1",
     "eslint": "^4.13.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.29.0",
     "react-hot-loader": "^3.0.0-beta.7",
+    "url-loader": "^0.6.2",
     "webpack": "^3.4.0",
     "webpack-dev-server": "^2.5.0"
   },
